--- a/app/src/main/res/layout/list_selection_item.xml
+++ b/app/src/main/res/layout/list_selection_item.xml
@@ -1,6 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+
+
+<androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="2dp">
+
+    <LinearLayout
               android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
@@ -19,3 +32,4 @@
             android:layout_margin="@dimen/dimen_16"
             tools:text="Finish Base Code"/>
 </LinearLayout>
+</androidx.cardview.widget.CardView>
